--- a/templates/_flash.html.twig
+++ b/templates/_flash.html.twig
@@ -1,4 +1,4 @@
-<div class="mt-3 mx-3">
+<div class="m-3 no--print">
     {% for flash in app.flashes('information') %}
     <div class="alert alert-info mx-3 my-1" role="alert">{{ flash }}
         <!-- Possibilité d'introduire un bouton dans le ruban de message -->
