--- a/templates/claim/_banner.html.twig
+++ b/templates/claim/_banner.html.twig
@@ -1,6 +1,7 @@
 <!-- DEBUT Driver Controller TEMPLATES banner -->
+{% set bannerimg='banner/claim.jpg' %}
 <section class="banner" id="claim--banner"
-    style="background-image:url({{ asset(sImgPath ~'banner/claim.jpg') }});"
+    style="background-image:url('{{ asset(sImgPath ~ bannerimg) }}');"
 >
     <H1>PROGRAMMER UNE COURSE</H1>
     
