--- a/templates/driver/driverspresentation.html.twig
+++ b/templates/driver/driverspresentation.html.twig
@@ -7,17 +7,20 @@
 <!-- Driver Controller banner -->
 {{ include('driver/_banner.html.twig') }}
 
-<section class="paragraph--large">
+<section class="paragraph--large mt-5">
 
     <!-- Informations... -->
     <p>
+        L'Annuaire des motos-taxis de France propose un service de mise en relation gratuit,
+        et prend en charge la génération des documents contractuels jusqu'à la facture...
+        <br><br>
         Si vous êtes vous-même détenteur de la carte professionnelle de conducteur VMDTR,
-        que vous êtes immatriculé au répertoire des métiers, et disposez de votre propre véhicule,
+        que vous êtes immatriculé au répertoire des métiers, et disposez d'un véhicule elligible à la pratique du métier,
         enregistrez-vous dans cet annuaire afin d'être référencé et de profiter d'une plus large visibilité.
         Vous recevrez des demandes de courses par courriel, ou pourrez même être directement contacté
         par toute personne consultant cet annuaire dans le but de trouver un moto-taxi.
         <br>
-        <h5> Plus nous serons de conducteurs référencés, plus la visibilité de cet annuaire et son utilisation pour nous trouver se fera...</h5>
+        <h5> Plus nous serons de conducteurs référencés, plus la visibilité de cet annuaire et son utilisation seront importantes...</h5>
     </p>
     <p>
         (pour vous renseigner à propos de l'immatriculation au répertoire des métiers,
