--- a/templates/geography/_selectregion.html.twig
+++ b/templates/geography/_selectregion.html.twig
@@ -1,6 +1,6 @@
 
 {% set regions=getregions() %}
-<select class="form-control select--filtered" size="1" position="absolute" name="region"
+<select class="form-control select--filtered" size="1" position="absolute" name="region" title="regions"
     {% if id is defined %}
     id="{{ id }}"
     {% else %}
