--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -14,13 +14,12 @@
 @import url(https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900display=swap%27);
 *{
     font-family: "Poppins", sans-serif;
-    /* border:1px solid red; */
+    /* border:1px solid black; */
 }
-
 body{
+    position:relative;
     width:100vw;
     /**/
-    position:relative;
     margin:0;
     padding:0;
     /**/
@@ -28,18 +27,70 @@ body{
     flex-direction:column;
     justify-content:center;
 }
-/* Accentue les textes des lignes de titres des Table */
+header{
+    position: sticky;
+    top: 0px;
+    width:100%;
+    /**/
+    display:flex;
+    flex-direction:column;
+    padding-right:0.75em;
+    align-items:center;
+    z-index:99;
+    /**/
+    background: linear-gradient(to bottom right,blue, 8%, white, 90%, red);
+    box-shadow: 0px 4px 8px black;
+}
+table{
+    border-left:1px solid grey;
+    border-right:1px solid grey;
+    border-bottom:1px solid grey;
+}
 th{
     font-size:1.2em;
     font-weight:bolder;
 }
-
+footer{
+    display:flex;
+    flex:row;
+    /* height:75px; */
+    width:100%;
+    font-weight:bolder;
+    /* color:black; */
+    justify-content: center;
+    text-align:center;
+    align-items:center;
+    /**/
+    background: linear-gradient(to top right,blue, 8%, white, 90%, red);
+    box-shadow: 0px 0px 12px black;
+}
+a:link{
+    text-decoration:none;
+}
 
 /**
- * -------------------------------------------------------------------------
- * Astuce pour renommer le bouton de l'élément Bootstrap FileType,
- * à la condition que dans FormType, soit précisé : 'attr'=>['lang'=>"fr"],
- * -------------------------------------------------------------------------
+ * ------------------------------------------------------------------------
+ *  Astuce pour redéfinir les élements de navigation du Carousel Bootstrap
+ * ------------------------------------------------------------------------
+*/
+.carousel-control-prev-icon{
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='rgb(0,0,0)' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+.carousel-control-next-icon{
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='rgb(0,0,0)' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+}
+.carousel-indicators>li{
+    width: 30px;
+    height: 7px;
+    border-radius: 100%;
+    background-color: black;
+}
+
+/**
+ * --------------------------------------------------------------------------
+ *  Astuce pour renommer le bouton de l'élément Bootstrap FileType,
+ *  à la condition que dans FormType, soit précisé : 'attr'=>['lang'=>"fr"],
+ * --------------------------------------------------------------------------
 */
 .custom-file-label::after{
     content: "Parcourir...";
@@ -100,20 +151,6 @@ th{
 ---------------------------------------------------------------------
 */
 /* -- DIVERS -- */
-#section--header{
-    width:100%;
-    /* border:2px solid red; */
-    /* background-color: white; */
-    /**/
-    display:flex;
-    flex-direction:column;
-    padding-right:0.75em;
-    align-items:center;
-    z-index:99;
-    /**/
-    background: linear-gradient(to top right,blue, 8%, white, 90%, red);
-    box-shadow: 0px 4px 8px black;
-}
 .banner{
     width:100%;
     box-shadow: 0px 6px 8px grey;
@@ -125,13 +162,14 @@ th{
     box-shadow:2px 2px 4px black;
 }
 .btn--action{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 25px;
-    width: 25px;
-    border-radius: 50%;
+    margin:0.35em;
+    display:flex;
+    flex-direction:row;
+    justify-content:center;
+    align-items:center;
+    height:25px;
+    width:25px;
+    border-radius:50%;
     background-color:lightgrey;
     box-shadow:2px 2px 4px black;
 }
@@ -144,10 +182,10 @@ th{
 }
 #uptotop1{
     position:fixed;
-    height: 40px;
-    width: 40px;
-    bottom:2em;
-    right:2em;
+    height: 35px;
+    width: 35px;
+    bottom:1em;
+    right:1em;
     /**/
     color:blue;
     font-size:1.5em;
@@ -157,10 +195,10 @@ th{
 }
 #uptotop2{
     position:fixed;
-    height: 40px;
-    width: 40px;
-    bottom:2em;
-    left:2em;
+    height: 35px;
+    width: 35px;
+    bottom:1em;
+    left:1em;
     /**/
     color:blue;
     font-size:1.5em;
@@ -257,7 +295,7 @@ th{
 }
 /* -- BANNIERES --
 /* - Bouton de demande de course - */
-.btn--ordering{
+.btn--booking{
     /**/
     position: absolute;
     top:300px;
@@ -269,31 +307,17 @@ th{
     box-shadow: 2px 2px 0.25em blue;
     border-radius: 50px;
 }
-.btn--ordering:hover{
+.btn--booking:hover{
     color:white;
     background-color: rgba(255, 0, 0, 1);
     box-shadow:inset 3px 3px 8px black;
 }
-#app--footer{
-    display:flex;
-    flex:row;
-    height:75px;
-    width:100%;
-    font-weight:bolder;
-    background-color:rgb(92, 89, 89);
-    color:white;
-    justify-content: center;
-    align-items:center;
-}
 /* - Menus secondaires... - */
-.nav--inpage{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content:center;
-    align-items:center;
-}
 #nav--inpage{
+    position:sticky;
+    padding-top:1em;
+    z-index:89;
+    /**/
     display:flex;
     flex-direction:row;
     flex-wrap:wrap;
@@ -302,6 +326,13 @@ th{
     align-items:center;
     /**/
     box-shadow:0px 6px 8px grey;
+}
+.nav--inpage-items{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content:center;
+    align-items:center;
 }
 /* -- POUR LES FORMULAIRES -- */
 .required::after{
@@ -315,7 +346,7 @@ th{
     justify-content:space-between;
     align-items:center;
     width:fit-content;
-    height: fit-content;
+    height:fit-content;
     /**/
     color:white;
     /* font-weight: bold; */
@@ -330,7 +361,7 @@ th{
     justify-content:space-between;
     align-items:center;
     width:fit-content;
-    height: fit-content;
+    height:fit-content;
     /**/
     color:white;
     /* font-weight: bold; */
@@ -340,7 +371,8 @@ th{
 }
 /* -- CONTENEURS & TABLEAUX -- */
 .paragraph--large{
-    margin:2.5em;
+    margin-inline:2.5em;
+    /* margin:2.5em; */
 }
 .card--3D-horizontal{
     /* border:1px solid black; */
@@ -463,6 +495,22 @@ th{
     display: flex;
     flex-direction: row;
 }
+.border--success{
+    box-shadow:inset 0px 0px 0px 5px rgb(70, 230, 70);
+    /* box-shadow:inset 0px 0px 0px 5px rgb(180, 255, 180); */
+}
+.border--danger{
+    box-shadow:inset 0px 0px 0px 5px rgb(240, 105, 105);
+    /* box-shadow:inset 0px 0px 0px 5px rgb(250, 180, 180); */
+}
+.row--success{
+    background-color: rgb(70, 230, 70);
+    /* background-color: rgb(180, 255, 180); */
+}
+.row--danger{
+    background-color: rgb(240, 105, 105);
+    /* background-color: rgb(250, 180, 180); */
+}
 .btn--tabtype{
     padding-left: 1em;
     padding-right: 1em;
@@ -535,7 +583,7 @@ th{
     justify-content:space-between;
     align-items:center;
     width:fit-content;
-    height: fit-content;
+    height:fit-content;
     /**/
     color:white;
     /* font-weight: bold; */
@@ -553,7 +601,7 @@ th{
     justify-content:space-between;
     align-items:center;
     width:fit-content;
-    height: fit-content;
+    height:fit-content;
     /**/
     color:white;
     /* font-weight: bold; */
@@ -563,6 +611,27 @@ th{
     background-color: rgba(0, 89, 255, 0.65);
     box-shadow: 2px 2px 0.25em red;
     border-radius: 10px;
+}
+/* -- FOOTER -- */
+#Div-ShortCuts_Row{
+    display:flex;
+    flex-direction:row;
+    text-align: center;
+    align-items:center;
+    justify-content:center;
+}
+.ShortCuts{
+    margin:15px;
+    color:black;
+}
+footer>p{
+    font-style:italic;
+}
+/*  */
+#ImgCV{
+    /* filter:invert(100%); */
+    height:16px;
+    /* color:black; */
 }
 
 
@@ -833,6 +902,7 @@ th{
     background-color: rgba(0, 89, 255, 1);
     box-shadow:inset 3px 3px 6px black;
 }
+/*
 .nav--inpage-btn-important{
     margin-bottom:0.75em;
     margin-left: 0.5em;
@@ -842,11 +912,9 @@ th{
     padding-right: 1em;
     font-size: 0.75em;
     font-weight: bold;
-    /**/
     color:white;
     background-color: rgba(255, 0, 0, 0.55);
     box-shadow: 2px 2px 0.25em blue;
-    /**/
     border-radius: 10px;
 }
 .nav--inpage-btn-important:hover{
@@ -854,6 +922,7 @@ th{
     background-color: rgba(255, 0, 0, 0.75);
     box-shadow:inset 3px 3px 6px black;
 }
+*/
 /* -- CONTENEURS -- */
 .card--profile{
     display: flex;
@@ -956,7 +1025,7 @@ th{
     background-size: cover;
     background-position: center;
     /**/
-    min-height: 400px;
+    min-height:400px;
     /**/
     justify-content: center;
     align-items: center;
@@ -975,7 +1044,7 @@ th{
     justify-content:space-between;
     align-items:center;
     width:fit-content;
-    height: fit-content;
+    height:fit-content;
     /**/
     color:white;
     font-weight: bold;
@@ -1030,7 +1099,7 @@ th{
         position:absolute;
         top:0px;
     }
-    /* .btn--ordering{
+    /* .btn--booking{
         / * position:absolute; * /
         top:50px;
     } */
@@ -1054,5 +1123,11 @@ th{
         /**/
         border:none;
         box-shadow:none;
+    }
+}
+@media print{    
+    .no--print,.no--print *
+    {
+        display: none !important;
     }
 }
