--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,9 +26,6 @@
 
     <body>
 
-        <!-- Bouton "fixe" à afficher en même temps que toute Modale, pour fermeture de celle-ci -->
-        <!-- <div class="btn--circle btn--hidemodal modal--closing" id="btn--modal--closing" style="display:none;">X</div> -->
-        
         <!-- Ruban horizontal pour le Header -->
         {% if controller_func is defined and 
             (controller_func=='ChangePicture' or controller_func=='ChangePwd')
@@ -42,7 +39,7 @@
                 <!-- Logo & Marque -->
                 <div class="d-flex flex-column col-3 pl-0">
                     <div id="nav--brand">
-                        <a href="{{ path('homepage_index') }}"><img class="nav--logo pt-2" src="{{ asset(sFaviconFullname) }}" alt="logo annuaire moto-taxi"></img></a>
+                        <a href="{{ path('homepage_index') }}"><img class="nav--logo pt-2" src="{{ asset(sFaviconFullname) }}" alt="logo annuaire moto-taxi"></img></a></li>
                     </div>
                 </div>
                 <div class="d-flex flex-column col-9">
@@ -71,47 +68,59 @@
                 >
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <!-- FIN bouton "Burger" -->
+                <!-- FIN bouton "Burger"
+                    DEBUT du menu...
+                -->
                 <div class="collapse navbar-collapse nav--menu" id="navbar-collapse--Main">
                     <!-- Menus 'permanents' -->
                     <ul class="navbar-nav">
-                        <a class="nav-item btn-sm" href="{{ path('homepage_index') }}">Accueil</a>
-                        <a class="nav-item btn-sm" href="{{ path('driver_presentation') }}">Les pilotes</a>
-                        <a class="nav-item btn-sm" href="{{ path('flatrate_index') }}">Tarification/Paiement</a>
+                        <li><a class="nav-item btn-sm" href="{{ path('homepage_index') }}">
+                            <i class="fas fa-home"></i>
+                            Accueil
+                        </a></li>
+                        <li><a class="nav-item btn-sm" href="{{ path('driver_presentation') }}">
+                            <i class="fas fa-motorcycle"></i>
+                            Les pilotes
+                        </a></li>
+                        <li><a class="nav-item btn-sm" href="{{ path('flatrate_index') }}">
+                            <i class="fas fa-calculator"></i>
+                            Tarification/Paiement
+                        </a></li>
                         <!-- Menus 'contextuels' -->
                         {# Si l'utilisateur EST DEJA identifié #}
                         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                         <!-- page(s) profil utilisateur -->
-                        <a class="nav-item btn-sm" 
-                            {% if is_granted("ROLE_DRIVER") %}
+                        <li><a class="nav-item btn-sm" 
+                            {% if app.user.driver %}
                             href="{{ path('profile_driver') }}"
-                            {% elseif is_granted("ROLE_CUSTOMER") %}
+                            {% elseif app.user.customer %}
                             href="{{ path('profile_customer') }}"
                             {% else %}
                             href="{{ path('profile_user', {'id': app.user.id}) }}"
                             {% endif %}
                         >
-                            <i class="ri-account-circle-line"></i>
-                            {{ app.user.firstname }} {{ app.user.lastname }}
-                        </a>
+                            <i class="fas fa-tachometer-alt"></i>
+                            Tableau de bord
+                            {#<!-- {{ app.user.firstname }} {{ app.user.lastname }} -->#}
+                        </a></li>
                         <!-- page(s) profil administrateur -->
                             {% if is_granted("ROLE_ADMIN") %}
-                        <a class="nav-item btn-sm" href="{{ path('admin_pending') }}">
+                        <li><a class="nav-item btn-sm" href="{{ path('admin_pending') }}">
                             <i class="ri-admin-line"></i>
                             Administration
-                        </a>
+                        </a></li>
                             {% endif %}
                         <!-- Lien de déconnexion -->
-                        <a class="nav-item btn-sm" href="{{ path('security_logout') }}">
+                        <li><a class="nav-item btn-sm" href="{{ path('security_logout') }}">
                             <i class="ri-logout-circle-r-line"></i>
                             Déconnexion
-                        </a>
+                        </a></li>
                         <!-- Si l'utilisateur N'est PAS encore identifié => connexion -->
                         {% else %}
-                        <a class="nav-item btn-sm" href="{{ path('security_login') }}">
+                        <li><a class="nav-item btn-sm" href="{{ path('security_login') }}">
                             <i class="ri-login-box-line"></i>
                             Connexion
-                        </a>
+                        </a></li>
                         {% endif %}
                     </ul>
                 </div>
@@ -126,11 +135,43 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
 
-        <div class="btn--action uptotop" id="uptotop1" style='display:none;'><a href="#" title="title"><i class="ri-arrow-up-line"></i></a></div>
-        <div class="btn--action uptotop" id="uptotop2" style='display:none;'><a href="#" title="title"><i class="ri-arrow-up-line"></i></a></div>
+        <div class="btn--action uptotop" id="uptotop1" style='display:none;'>
+            <a href="#" title="title"><i class="ri-arrow-up-line"></i></a></li>
+            <span class="sr-only sr-only-focusable">Aller en haut de la page</span>
+        </div>
+        <div class="btn--action uptotop" id="uptotop2" style='display:none;'>
+            <a href="#" title="title"><i class="ri-arrow-up-line"></i></a></li>
+            <span class="sr-only sr-only-focusable">Aller en haut de la page</span>
+        </div>
     </body>
 
-    <footer class="d-flex flex-column" id='app--footer' style="color:white;height:75px;font-weight:bolder;background-color:rgb(92, 89, 89);justify-content:center;align-items:center;">
-        FOOTER de merde !....
+    <footer class="d-flex flex-column mt-5 p-1" id="section--footer">        
+        <div id="Div-ShortCuts_Row">
+            <a href="mailto:twowheelsformotion@gmail.com" title="Ecrire à l'administrateur (développeur)">
+                <i class="fas fa-envelope ShortCuts"></i>
+            </a>
+            <a href="tel:0671100299" title="Téléphoner à l'administrateur (développeur)">
+                <i class="fas fa-mobile-alt ShortCuts"></i>
+            </a>
+            <a href="{{ asset('build/images/footer/CGU.html') }}" title="CGU" target="_blank">
+                <i class="ri-bookmark-fill ShortCuts"></i>
+            </a>
+            <a href="{{ asset('build/images/footer/mentions_legales.html') }}" title="Mentions légales" target="_blank">
+                <i class="ri-flag-2-fill ShortCuts"></i>
+            </a>
+            <a href="https://github.com/herve-birolini" title="Visiter le Github du développeur" target="blank">
+                <i class="fab fa-github-square ShortCuts"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/herv%C3%A9-birolini-a09281148/" title="Visiter le LinkedIn du développeur" target="blank">
+                <i class="fab fa-linkedin ShortCuts"></i>
+            </a>
+            <a href="{{ asset('build/images/footer/cv/index.php') }}" title="Voir le CV du développeur" target="blank">
+                <img class="ShortCuts" id="ImgCV" src="{{ asset('build/images/footer/cv/SRC/curriculum vitae.png') }}"></i>
+            </a>
+        </div>
+        <p>
+            © octobre 2021 - Ce site a été créé comme projet de soutenance sous
+            Symfony 5, par Hervé BIROLINI
+        </p>
     </footer>
 </html>
