--- a/templates/driver/_card_full.html.twig
+++ b/templates/driver/_card_full.html.twig
@@ -24,13 +24,13 @@
             </div>
             <!-- Bloc notation + id user -->
             <div>
-                <div class="row--stars">
+                {#<!-- <div class="row--stars">
                     <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="Etoile notation">
                     <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="Etoile notation">
                     <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="Etoile notation">
                     <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="Etoile notation">
                     <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="Etoile notation">
-                </div>
+                </div> -->#}
                 <h5 class="mt-1" style='font-weight:bolder;'>{{ obUser.firstname~' '~obUser.lastname }}</h5>
                 <small>{{ 'Inscrit depuis le '~obUser.registrationdate|date('d-m-Y') }}</small>
                 <br>
@@ -58,13 +58,11 @@
         <a href="{#{{ path('driver_profile', {'id': obDriver.id}) }}#}" title="Voir sa fiche" class="mr-2">
             <i class="far fa-eye"></i>
         </a> -->
-        &emsp;
         <a href="{{ 'mailto:' ~ obUser.email }}" title="Lui envoyer un courriel">
             <div class="btn--action" style="height:25px;width:35px">
                 <i class="fas fa-at"></i>
             </div>
         </a>
-        &ensp;
         <a href="{{ 'tel:' ~ obUser.phone }}" title="Lui téléphoner" class="ml-2">
             <div class="btn--action" style="height:25px;width:35px">
                 <i class="fas fa-phone-alt"></i>
