--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -7,9 +7,17 @@
 
     {{ include('homepage/_banner.html.twig') }}
 
+    <div class="d-flex flex-row align-items-center justify-content-around" id="section--services"
+        style="align-self:center;justify-self:center;border:10px ridge grey;margin-bottom:2em;"
+    >
+        <h1 style="padding:0.65em;font-weight:bolder;">Le moto-taxi et vous</h1>
+    </div>
+    
     <!-- Job description -->
     <!--------------------->
-    <section class="paragraph--large" id="section--services">
+    <section class="paragraph--large">
+    <!-- <div id="section--services" style="height:10em;"></div>
+    <section class="paragraph--large"> -->
         <h2 class="title--h2">Vous servir...</h2>
         <div class="card--3D-horizontal">
             <p class="col-md-12 col-lg-8">
@@ -23,9 +31,9 @@
                 <br>&emsp;La défense - Orly: entre 25 et 35 min.
                 <br>&emsp;La défense - CDG: entre 30 et 40 min.
                 <br><br>
-                Inscivez-vous dès maintenant ici &ensp; <a href="{{ path('registration_user') }}"><i class="ri-profile-line" style="font-size:1.1em;"></i></a> ,
+                Inscivez-vous GRATUITEMENT dès maintenant ici&ensp;<a href="{{ path('registration_user') }}"><i class="ri-profile-line" style="font-size:1.1em;"></i></a> ,
                 et formuler votre commande de course, qui sera directement et automatiquement transmise aux pilotes exerçant dans la région concernée.
-                <br><a href="{{ path('homepage_manual') }}">(l'Annuaire, mode d'emploi)</a>
+                {#<!-- <br><a href="{{ path('homepage_manual') }}">(l'Annuaire, mode d'emploi)</a> -->#}
             </p>
             <img class="card--imgsquare" src="{{ asset(sImgPath ~'homepage/embouteillage.jpg') }}" alt="Photo d'un embouteillage">
         </div>
@@ -34,7 +42,8 @@
 
     <!-- Professionnals listing presentation -->
     <!----------------------------------------->
-    <section class="paragraph--large" id="section--pro">
+    <div id="section--pro" style="height:10em;"></div>
+    <section class="paragraph--large">
         <h2 class="title--h2">Des professionnels sur qui compter...</h2>
         <div class="card--3D-horizontal">
             <img class="card--imgsquare" src="{{ asset(sImgPath ~'homepage/Vignette-VMDTR.png') }}" alt="Photo d'une vignette VMDTR">
@@ -54,7 +63,8 @@
         </div>
     </section>
     <!-- ... équipements -->
-    <section class="paragraph--large" id="section--equipments">
+    <div id="section--equipments" style="height:10em;"></div>
+    <section class="paragraph--large">
         <h2 class="title--h2">Les équipements indispensables...</h2>
         <div class="card--3D-horizontal" style="justify-content:center;">
             <div class="d-flex flex-column">
@@ -85,11 +95,12 @@
             </div>
         </div>
     </section>
-    <!-- -->
-    <section class="paragraph--large" id="section--bikes">
+    <!-- ... les motos -->
+    <div id="section--bikes" style="height:10em;"></div>
+    <section class="paragraph--large">
         <h2 class="title--h2">Les motos</h2>
-        <div class="card--3D-horizontal" style="justify-content: center;">
-            <p>
+        <div class="card--3D-horizontal" style="justify-content:center;">
+            <p class="col-12 col-lg-7">
                 La profession impose une catégorie de moto. De plus, celles-ci doivent avoir moins de 5 ans.
                 <br>Exemples de machines les plus utilisées :
                 <br>- Honda Goldwing
@@ -98,15 +109,52 @@
                 <br>
                 <br>Toutes les machines proposent une jupes de protection en cas de pluie, et d'un porte-paquet.
             </p>
-            <div class="card--horizontal">
-                <img class="card--imgrectangular" style="width:340px;" src="{{ asset(sImgPath ~'homepage/honda gold wing gl1800.png') }}" alt="Photo Honda Goldwing 1800">
-                <img class="card--imgrectangular" style="width:275px;" src="{{ asset(sImgPath ~'homepage/BMW K1600GTL Exclusive.png') }}" alt="Photo BMW K1600GTL Exclusive">
-                <img class="card--imgrectangular" style="width:340px;" src="{{ asset(sImgPath ~'homepage/c-evolution.png') }}" alt="Photo BMW C-Evolution">
+
+            <!-- - Carousel pour défilement des images de motos types - -->
+            <!-- CLASS 'slide' pour défilement latéral ou 'carousel-fade' pour effet d'estompage (/!\ pas les 2 en même temps /!\)-->
+            <!-- ID pour "connexion" avec les flèches latérales, et les indicateurs => changement d'image manuel -->
+            <div class="carousel slide col-12 col-lg-5" id="carousel--bikes"
+                data-ride="carousel" data-interval="2000"
+                style='align-items:center;justify-content:center;text-align:center;'
+            >
+                <!-- Les éléments à faire tourner -->
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="card--imgrectangular" style="width:340px;" src="{{ asset(sImgPath ~'homepage/honda gold wing gl1800.png') }}" alt="Photo Honda Goldwing 1800">
+                        <div class="carousel-caption-"><p>HONDA Gold Wing</p></div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="card--imgrectangular" style="width:275px;" src="{{ asset(sImgPath ~'homepage/BMW K1600GTL Exclusive.png') }}" alt="Photo BMW K1600GTL Exclusive">
+                        <div class="carousel-caption-"><p>BMW K1600</p></div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="card--imgrectangular" style="width:340px;" src="{{ asset(sImgPath ~'homepage/c-evolution.png') }}" alt="Photo BMW C-Evolution">
+                        <div class="carousel-caption-"><p>BMW C-Evolution (électrique)</p></div>
+                    </div>
+                </div>
+                <br>
+                <!-- les flèches latérales de navigation manuelle -->
+                <a class="carousel-control-prev" href="#carousel--bikes" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carousel--bikes" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+                <!-- la ligne d'indicateurs inférieure -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel--bikes" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel--bikes" data-slide-to="1"></li>
+                    <li data-target="#carousel--bikes" data-slide-to="2"></li>
+                </ol>
             </div>
+
         </div>
     </section>
-    <!-- -->
-    <section class="paragraph--large" id="section--luggages">
+    <!-- ... les bagages -->
+    <div id="section--luggages" style="height:10em;"></div>
+    <section class="paragraph--large">
         <h2 class="title--h2">Les bagages</h2>
         <div class="card--3D-horizontal" style="justify-content: center;">
             <img class="card--imgsquare" src="{{ asset(sImgPath ~'homepage/luggages.jpg') }}" alt="Photo d'une vignette VMDTR">
@@ -118,13 +166,15 @@
         </div>
     </section>
 
-    <!-- Les (3 max.) derniers Avis sur l'Annuaire -->
-    <!----------------------------------------------->
-    <section class="paragraph--large" id="section--reviews">
-        {#{% if siteadvices_last is defined %}#}
+{#<!--
+    <! -- Les (3 max.) derniers Avis sur l'Annuaire -- >
+    <! ----------------------------------------------- >
+    <div id="section--reviews" style="height:10em;"></div>
+    <section class="paragraph--large">
+        { #{% if siteadvices_last is defined %}# }
         <h2 class="title--h2">L'avis des utilisateurs de l'annuaire</h2>
         <div class="card--inset">
-            {#{% for advice in siteadvices_last %}#}
+            { #{% for advice in siteadvices_last %}# }
             <div class="card--3D-vertical col-12 col-md-3">
                 <div class='card--head'>
                     <div>
@@ -139,7 +189,7 @@
                         <img style='height:20px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="">
                     </div>
                 </div>
-                <!-- <hr> -->
+                <! -- <hr> -- >
                 <span class="card--text">
                     Ce site est génial !
                     Facile de compréhension, on trouve facilement et rapidement l'information concernant la réponse possible à notre besoin.
@@ -160,7 +210,7 @@
                         <img style='height:20px;' src="{{ asset(sImgPath ~'misc/star_0.png') }}" alt="">
                     </div>
                 </div>
-                <!-- <hr> -->
+                <! -- <hr> -- >
                 <span class="card--text">
                     Ce site est génial !
                 </span>
@@ -179,20 +229,20 @@
                         <img style='height:20px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="">
                     </div>
                 </div>
-                <!-- <hr> -->
+                <! -- <hr> -- >
                 <span class="card--text">
                     Ce site est génial !
                     Facile de compréhension, on trouve facilement et rapidement l'information concernant la réponse possible à notre besoin.
                     Les pilotes sont très pros, toujours ponctuels et courtois. Pour les passagers débutants, ils savent mettre en confiance...
                 </span>
             </div>
-            {#{% endfor %}#}
+            { #{% endfor %}# }
         </div>
         <br>
-        {#{% endif %}#}
-        {#{% if siteadvices_extrem is defined %}#}
+        { #{% endif %}# }
+        { #{% if siteadvices_extrem is defined %}# }
         <div class="card--inset">
-            {#{% for advice in siteadvices_extrem %}#}
+            { #{% for advice in siteadvices_extrem %}# }
             <div class="card--3D-vertical col-12 col-xl-5">
                 <div class='card--head'>
                     <div>
@@ -207,7 +257,7 @@
                         <img style='height:20px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="">
                     </div>
                 </div>
-                <!-- <hr> -->
+                <! -- <hr> -- >
                 <span class="card--text">
                     Le meilleur des avis !
                     J'peux plus m'en passeerrrrr.......
@@ -227,14 +277,17 @@
                         <img style='height:20px;' src="{{ asset(sImgPath ~'misc/star_0.png') }}" alt="">
                     </div>
                 </div>
-                <!-- <hr> -->
+                <! -- <hr> -- >
                 <span class="card--text">
                     Le pire des avis !
                     A fuir...
                 </span>
             </div>
-            {#{% endfor %}#}
+            { #{% endfor %}# }
         </div>
-        {#{% endif %}#}
-    </section>
+        { #{% endif %}# }
+    </section> 
+-->#}
+
+
 {% endblock %}
