--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,7 +13,7 @@
 
         {{ form_start(registrationForm,{attr:{novalidate:"novalidate"}}) }}
         {{ form_end(registrationForm) }}
-        <a href="CGU">Consulter les Conditions Générales d'Utilisation</a>
+        <a href="{{ asset('build/images/footer/CGU.html') }}" target="_blank">Consulter les Conditions Générales d'Utilisation</a>
         <br>
 
         <div class="btns--row">
